@@ -1,3 +1,11 @@
+Thu Nov 13 09:53:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Malloc_Test.cpp:
+          Use argv[0] as process name when it is available
+
+        * tests/Process_Strategy_Test.cpp:
+          Minor improvements and don't use ACE_ASSERT
+
 Thu Nov 13 09:41:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Acceptor.h:
